2006-12-15  Andrew Cagney  <cagney@redhat.com>

	* TestTaskTerminateObserver.java (check): Mark anything involving
	exit(47) or SIGKILL as broken, 3489.

2006-12-15  Nurdin Premji  <npremji@redhat.com>

	* ProcException.java: Removed.
	* ProcBlockAction.java: Reverted ProcException.
	* TestProcForceDetach: Ditto.
	* TestProcStopped: Ditto.

2006-12-15  Mike Cvet  <mcvet@redhat.com>

	* TestLib.java (AttachedSyscallDaemonProcess): Cleaned up, fixed.
	(AttachedSyscallDaemonProcess.deleteObservers): Added.

2006-12-15  Nurdin Premji  <npremji@redhat.com>

	* ProcException.java (ProcException): Added.	
	* TestProcForceDetach.java (MyProcBlockAction): Renamed from MyObserver.
	(MyProcBlockAction.MyProcBlockAction): 	throw ProcException.
	(requestRemove): catch ProcException
	* ProcBlockAction.java (.execute): Moved null proc and proc ownerships to ..
	(ProcBlockAction): here. Throw exception on null proc and proc ownership.	
	* TestProcStopped.java (MyTester.MyTester): throw ProcException
	(running): Catch ProcException
	(stopped): Ditto.

2006-12-14  Andrew Cagney  <cagney@redhat.com>

	* TestRegisters.java: Replace TestRegMemModify.java.
	* TestRegs.java: Delete.

	* TestMemory.java (testMemoryReadWrite): Mark as broken by 3725.
	Fix name of test executable.
	
	* TestMemory.java: Rename TestModify.java.

	* TestTaskSyscallObserver.java (TestSyscallInterruptXXXX):
	Rename TestSyscallInterruptInternals.
	* TestRegs.java (TestI386RegsXXX): Rename TestI386RegsInternals.
	(TestX8664RegsXXX): Rename TestX8664RegsInternals.
	(TestPPC64RegsXXX): Rename TestPPC64RegsInternals.
	* TestRegMemModify.java (TestI386ModifyXXX): Rename
	TestI386ModifyInternals.
	(TestX8664ModifyXXX): Rename TestX8664ModifyInternals.
	(TestPPC64ModifyXXX): Rename TestPPC64ModifyInternals.
	* TestModify.java (TestModifyXXX): Rename TestModifyInternals.

	* TestRegs.java (checkI386Regs, checkX8664Regs, checkPPC64Regs):
	Run funit-regs.

2006-12-12  Tim Moore  <timoore@redhat.com>
