@@ -103,6 +103,8 @@ public class TestProcStopped
 
   public void testMultiThreadedStoppedAckDaemon ()
   {
+      if (brokenUtraceXXX (3595))
+	  return;
     AckProcess ackProc = new AckDaemonProcess(2);
     stopped(ackProc, 3);
     assertRunUntilStop("testStoppedAckDaemon");
@@ -110,6 +112,8 @@ public class TestProcStopped
 
   public void testMultiThreadedStoppedDetached ()
   {
+      if (brokenUtraceXXX (3595))
+	  return;
     AckProcess ackProc = new DetachedAckProcess(2);
     stopped(ackProc, 3);
     assertRunUntilStop("testStoppedDetached");
