@@ -249,11 +249,15 @@ public class TestTaskObserver
     /** {@link #detachExitingTask} */
     public void testDetachExitingMainTask ()
     {
+	if (brokenUtraceXXX (3737))
+	    return;
 	detachExitingTask (0, true);
     }
     /** {@link #detachExitingTask} */
     public void testDetachExitingOtherTask ()
     {
+	if (brokenUtraceXXX (3737))
+	    return;
 	detachExitingTask (1, false);
     }
 
